--- a/CHANGES
+++ b/CHANGES
@@ -175,6 +175,12 @@ Added missing module name to readpar() call in __monitor_processes(), affecting 
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+62.2:
+
+Added ddmEndPointIn, ddmEndPointOut to Job class, and handling in displayJob() and setJobDef() (Job)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
