Added more support methods for benchmark test

--- a/CHANGES
+++ b/CHANGES
@@ -193,6 +193,9 @@ Added experiment argument to getOutFilesGuids() (RunJobUtilities)
 Now sending experiment name to getOutFilesGuids() in createFileMetadata() (RunJob)
 Importing getExperiment, getGUID (RunJobUtilities)
 Created shouldExecuteBenchmark() and executeBenchmark() (SiteInformation, ATLASSiteInformation)
+Moved getSiteInformation() to collect WN info section in runMain() (pilot)
+Created getBenchmarkDictionary() (Node)
+Now getting the benchmark dictionary in runRun() (pilot)
 
 Code merge with Alexey Anisenkov
 - Added new movers sub directory with new site mover (xrdcp) and mover module
