Fixed missing failed after stuck stage-out

--- a/CHANGES
+++ b/CHANGES
@@ -196,6 +196,7 @@ Created shouldExecuteBenchmark() and executeBenchmark() (SiteInformation, ATLASS
 Moved getSiteInformation() to collect WN info section in runMain() (pilot)
 Created getBenchmarkDictionary() (Node)
 Now getting the benchmark dictionary in runRun() (pilot)
+Now setting job to failed in __killLoopingJob() for stuck stage-outs (Monitor)
 
 Code merge with Alexey Anisenkov
 - Added new movers sub directory with new site mover (xrdcp) and mover module
