FAX TURL corrections

--- a/CHANGES
+++ b/CHANGES
@@ -218,7 +218,28 @@ Updated findGlobalFilePath() and getGlobalFilePaths() to accept already defined 
 Renamed file_list to file_dictionary in createPoolFileCatalog() (pUtil)
 Created storeDiskSpace(), used by __checkLocalSpace() (Monitor)
 Created getMaxDiskSpace(), used by addToJobMetrics() (Node)
-Added restart of utility and token extractor subprocesses at the end of the event range loop in __main__() (RunJobEvent)
+Added restart of utility subprocess and aborting job if token extractor has crashed at the end of the event range loop in __main__() (RunJobEvent)
+Aborting immediately if Token Extractor has died instead of waiting for AthenaMP to finish, in __main__() (RunJobEvent)
+Changed waiting time from 600 to 30, in __main__() (RunJobEvent)
+Removed outdated usages of dsname in getGlobalFilePaths() and replaced with scope which replaces dsname as an argument (FAXSiteMover)
+Sending scope instead of dsname to getGlobalFilePaths() from findGlobalFilePath() (FAXSiteMover, SiteMover)
+Added scope argument to findGlobalFilePath() (FAXSiteMover, SiteMover)
+Sending scope to findGlobalFilePath() from get_data() (FAXSiteMover)
+Extracting scope in get_data() (FAXSiteMover, aria2cSiteMover)
+Changed scope_dict to scope and sending scope_dict[lfn] instead of scope_dict to get_data(), in sitemover_get_data() (Mover)
+Removed outdated scope extraction from get_data() (aria2cSiteMover)
+Sending scope instead of dataset to getGlobalFilePaths() from convertSURLtoTURLUsingDataset() (Mover)
+Renamed convertSURLtoTURLUsingDataset() to convertSURLtoTURLUsingScope() (Mover)
+Sending scope instead of dataset to convertSURLtoTURLUsingScope() (also renamed, see previous comment) from convertSURLtoTURL() (Mover)
+Added scope argument to convertSURLtoTURL() (Mover)
+Sending scope to convertSURLtoTURL() from getTURLs() (Mover)
+Sending scope_dict to PFC4TURLs() from mover_get_data() (Mover)
+Added scope_dict argument to PFC4TURLs() (Mover)
+Sending scope_dict to createPFC4TURLs() from PFC4TURLs() (Mover)
+Added scope_dict argument to createPFC4TURLs() (Mover)
+Sending lfns and scope_dict to getTURLs() from createPFC4TURLs() (Mover)
+Added lfns and scope_dict arguments to getTURLs() (Mover)
+Created getMatchingLFN() used by getTURLs() (Mover)
 
 Code merge with Alexey Anisenkov
 - Added new movers sub directory with new site mover (xrdcp) and mover module
