--- a/CHANGES
+++ b/CHANGES
@@ -2,180 +2,12 @@ Complete change log for PanDA Pilot version PICARD
 --------------------------------------------------
 
 
-62.0:
-
-Sending gpfn (replica) and sitemover to isFAXAllowed() from mover_get_data() (Mover)
-Added surl and sitemover arguments to isFAXAllowed() (Mover)
-Removed fax_mode argument from getCatalogFileList(), and its call in getPoolFileCatalog() since it is not needed (Mover)
-Now verifying that a replica is not on TAPE before FAX can be used, in isFAXAllowed() (Mover)
-Updated error message "Encountered an empty SURL-GUID dictionary" to "Rucio returned an empty replica dictionary" in verifySURLGUIDDictionary() (Mover)
-Protection against triple slashes in updateRedirector() (FAXSiteMover)
-Moved getExtension() from pUtil to FileHandling
-Importing getExtension() from FileHandling, in moveToExternal() (pUtil)
-Importing getExtension() from FileHandling instead of from pUtil (SiteInformation, ATLASSiteInformation, JobState, Mover, RunJob, RunJobEvent, SiteMover)
-Removed import of unused getExtension (NordugridSiteInformation)
-Moved readJSON and writeJSON from FAXSiteMover to FileHandling
-Created discoverAdditionalOutputFiles() (RunJob)
-Now using discoverAdditionalOutputFiles() in __main__() (RunJob)
-Corrected several readpar -> self.readpar (SiteInformation)
-Created getField(), getNewQueuedata(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getObjectstoreName() (SiteInformation)
-Replaced all occurances of str(e) with e (pUtil)
-Now using local root setup in setup() (xrootdObjectstoreSiteMover)
-Out-commented HLT related code in extractAppdir() (ATLASSiteInformation)
-Created getOSTransferDictionaryFilename() (FileHandling)
-Created FileHandling::addToOSTransferDictionary() used by RunJobEvent::transferToObjectStore() (FileHandling, RunJobEvent)
-Now skipping pilot job kill when maximum batch system time limit has been reached and NO_PILOT_TIME_LIMIT_KILL is present in catchall, in __monitor_processes() (Monitor)
-Added getter and setter functions for taskID (RunJobEvent)
-readJSON() is now using openFile() and is more similar to getJSONDictionary() (FileHandling)
-Created addToOSTransferDictionary(), getObjectstoresList(), getObjectstoresField(), getObjectstorePath(), getOSNames() (FileHandling)
-Created getNewQueuedataFilename(), getNewQueuedata() (FileHandling)    MOVE??????
-Created getField(), getObjectstorePath()
-Created getOSJobMetrics() (PandaServerClient)
-Skipping killing bash process in killOrphans(), fixing a problem at e.g. RAL where batch logs went missing (processes)
-Now using getLFN() instead of basename of PFN in getFileInfo(). Requested by Rodney Walker after a problem seen at CERN-PROD with unexpected chars in PFN (Mover)
-Now verifying size of work dir for all jobs, not only for user jobs, in __check_remaining_space() (Monitor)
-Now using getLFN() instead of basename of PFN in createPoolFileCatalog() (pUtil)
-Added lfns argument to createPoolFileCatalog() (pUtil)
-Sending lfns to createPoolFileCatalog() in getPoolFileCatalog(), getPoolFileCatalogNG() (Mover)
-Sending lfns to PFC4TURLs() from mover_get_data() (Mover)
-Added lfns argument to PFC4TURLs(), createPFC4TURLs() (Mover)
-Sending lfns to createPFC4TURLs() from PFC4TURLs() (Mover)
-Sending lfns to createPoolFileCatalog() from createPFC4TURLs() (Mover)
-Sending self.__job.inFiles to createPoolFileCatalog() from prepareHPCJob() (RunJobHpcEvent)
-Rewrote getLFN() to better support PFNs whose basename can contain additional characters than the LFN (pUtil)
-Added copytool field to fileInfoDic in getFileInfo() (Mover)
-Now returning copytool_dictionary from getCatalogFileList(), received in getPoolFileCatalog() (Mover)
-Created getCopytoolDictionary() used by getCatalogFileList() (Mover)
-Now setting copytool_dictionary on a replica by replica basis in getCatalogFileList() (Mover)
-Now returning copytool_dictionary from getPoolFileCatalog(), received in getFileInfo() (Mover)
-Created extractCopytoolForPFN() used in getFileInfo() (Mover)
-Renamed copytool() to getCopytool() (Mover)
-Extracting and returning copytool in extractInputFileInfo(), received in mover_get_data() (Mover)
-Updating sitemover object dynamically depending on which copytool to use in mover_get_data() (Mover)
-Removed sitemover argument from isFAXAllowed() (Mover)
-Removed readpar import from pUtil (SiteInformation)
-Added version argument to getQueuedataFileName(), readpar() (SiteInformation)
-Sending version to getQueuedataFileName() from readpar() (SiteInformation)
-readpar() is now using getField() if new queuedata version is requested (SiteInformation)
-Sending lfnList to getPoolFileCatalog() from getPoolFileCatalog() (RunJobEvent)
-Using setPilotlogFilename() in cleanup() to prevent problem with writing the pilotlog after workdir has been removed (pUtil)
-Added version argument to readpar() (pUtil)
-Now using getNewQueuedata() from handleQueuedata() (pUtil)
-Sending si object to getFilePathForObjectStore() from getFileInfo() and getDDMStorage() (Mover)
-Sending si object to getDDMStorage() from mover_put_data() (Mover)
-Added si argument to getDDMStorage() (Mover)
-Sending computingElement (queuename) to mover_get_data() from get_data() (Mover)
-Added queuename argument to mover_get_data(), getFileInfo() (Mover)
-Sending queuename to getFileInfo() from mover_get_data() (Mover)
-Added getter and setter for __queuename (SiteInformation)
-Using si.setQueueName() in mover_put_data() (Mover)
-Sending site.computingElement (queuename) to mover_put_data() from transferActualLogFile(), transferAdditionalFile() (JobLog)
-Sending site.computingElement (queuename) to mover_put_data() from moveLostOutputFiles() (pilot)
-Sending site.computingElement (queuename) to mover_put_data() from stageOut() (RunJob, RunJobEvent)
-Added queuename argument to mover_put_data() (Mover)
-Now using si.getObjectstorePath() in getFilePathForObjectStore() (Mover)
-Changed log order message in verifySetup() and stageOutFile(). Requested by Rodney Walker (xrdcpSiteMover)
-Removed unused argument 'experiment' from transferActualLogFile(), and its calls in transferLogFile() (JobLog)
-Added argument 'experiment' to getLogPath() and its call in transferLogFile() (JobLog)
-Now using si.getObjectstorePath() instead of mover.getFilePathForObjectStore() in getLogPath() (JobLog)
-Created getObjectstoreBucketEndpoint() (SiteInformation)
-Created getHash(), getHashedBucketEndpoint() (FileHandling)
-Added log_transfer argument to getDDMStorage(), sent from mover_put_data() (Mover)
-Created isLogTransfer(), used by mover_put_data() (Mover)
-Created shouldCleanupOS() used by __main__() (RunJob)
-Created test method cleanupOS() (RunJob)
-Removed downloadEventRanges() since it is an imported function from EventRanges module (RunJobEvent)
-Returning cerr instead of cout if set in timedCommand() (pUtil)
-Will not set status=False when special SE log transfer fails, in transferLogFile() (JobLog)
-Created getPilotErrorReportFilename(), updatePilotErrorReport(), getHighestPriorityError() (FileHandling)
-Using updatePilotErrorReport() for nine failure scenarios, high priority errors (Monitor)
-Now using getHighestPriorityError() in getNodeStructure() to look for reported high priority errors (PandaServerClient)
-Removed vmPeakMax, vmPeakMean, RSSMean from jobMetrics since they are no longer needed (PandaServerClient)
-Updated __init__() and setup() to support new objectstores fields os_access_key, os_secret_key, os_is_secure (S3ObjectstoreSiteMover)
-Created getUtilityCommand() (Experiment, ATLASExperiment, AMSTaiwanExperiment, NordugridATLASExperiment)
-Created getUtilityInfo() used by getNodeStructure() (PandaServerClient)
-Created getUtilitySubprocess() used by executePayload() (RunJob)
-Created getUtilityJSONFilename() used by getUtilityCommand() (NordugridATLASExperiment, ATLASExperiment, Experiment)
-Created shouldExecuteUtility() (NordugridATLASExperiment)
-Added support for memory monitor in __main__() (RunJobEvent)
-Added format argument to timeStampUTC() (pUtil)
-Created writeTimeStampToFile() (pUtil)
-Using writeTimeStampToFile() in getNewJob() (pilot)
-Copying the time stamp file from the init dir to the work dir in __createJobWorkdir() (Monitor)
-Reading back start time from file and adding it to node structure in getNodeStructure() (PandaServerClient)
-Created getEventIndexURL() (EventService)
-Sending url to getTokenExtractorProcess() from __main__() (RunJobEvent)
-Added heandling of url in getTokenExtractorProcess() (RunJobEvent)
-
-Tracing report update
-- Added url and stateReason to getInitialTracingReport() (Mover)
-- Created prepareReport() that will replace the __sendReport() in the site movers (SiteMover)
-- Setting tracing report stateReason and url in sitemover_get_data() (Mover)
-- Created getTracingReportFilename() (FileHandling)
-- Removed __sendReport() (SiteMover, LocalSiteMover, xrdcp*, xrootd*, xrootdObject*, S3*, lcgcp*, dCache*, BNL*, Castor*, Chirp*, GFAL2*, GSIftp*, HU*, aria2c*, castorSvcClass*, curl*, rfcpLFC*)
-- Now using prepareReport() instead of __sendReport() (SiteMover, LocalSiteMover, xrdcp*, xrootd*, xrootdObject*, S3*, lcgcp*, dCache*, BNL*, Castor*, Chirp*, GFAL2*, GSIftp*, HU*, aria2c*,
-  castorSvcClass*, curl*, rfcpLFC*)
-- Storing tracing report in JSON file in prepareReport (SiteMover)
-- Now reading tracing report from file and finishing it in mover_get_data() (Mover)
-- Now returning the surl for more cases with put_data_retfail() from put_data() to make sure the url in the tracing report is set (SiteMover, lcgcp*, BNLdCache*, Castor*, Chirp*, GSIftp*,
-  HU*, aria2c*, curl*, dCache*, rfcpLFC*, xrootd*)
-
-DQ2 API to Rucio API migration:
-- Created new support methods: extractScopeLFN(), getScopeLFNListFromDictionary(), getGUIDForLFN() used by the new getRucioReplicaDictionary() (Mover)
-- getRucioReplicaDictionary() now returns both a replica dictionary and a surl dictionary containing file type and RSE info (Mover)
-- Receiving the new surl dictionary in getReplicaDictionaryRucio() (Mover)
-- Added new data members to replica class: filetype and rse (Mover)
-- Added new data members (filetype, rse) to replica object in getReplicaDictionaryRucio() (Mover)
-- Created getFiletypeAndRSE() used by getReplicaDictionaryRucio() (Mover)
-- Created getFiletype() used by getFileInfo() (Mover)
-- Now storing filetype in surl_filetype_dictionary, in getCatalogFileList() (Mover)
-- getCatalogFileList() now returns surl_filetype_dictionary, received in getPoolFileCatalog() (Mover)
-- getPoolFileCatalog() now returns surl_filetype_dictionary, received in getFileInfo() (Mover)
-- filetype is now extracted and returned by extractInputFileInfo(), received in mover_get_data() (Mover)
-- Added filetype argument to isFAXAllowed() (Mover)
-- filetype is now sent to isFAXAllowed() from mover_get_data() (Mover)
-- Using filetype instead of isFileOnTape() in isFAXAllowed() (Mover)
-- Added surl_filetype_dictionary argument to randomizeReplicas() (Mover)
-- Sending surl_filetype_dictionary to randomizeReplicas() from getCatalogFileList() (Mover)
-- Created getFiletypeFromDictionary(), used by getFileInfo() (Mover)
-- Using getFiletypeFromDictionary() instead of calling isFileOnTape() in randomizeReplicas() (Mover)
-- Using replica.filetype instead of calling isFileOnTape() in sortReplicas(), two times (Mover)
-- Removed deprecated methods isFileOnTape() and isTapeSite() (SiteMover)
-- Now finishing tracing report in sitemover_get_data(), sitemover_get_all_data(), chirp_put_data(), sitemover_put_data() (Mover)
-- Replaced getFileCatalog() with trivial function returning <rucio default> string, since it is no longer needed (ATLASExperiment, AMSTaiwanExperiment)
-- Returning empty list in getFileCatalogHosts() since it is no longer needed (ATLASExperiment, AMSTaiwanExperiment)
-- Now using c.declare_suspicious_file_replicas instead of dq2.declareSuspiciousFiles in reportFileCorruption() to declare corrupt file (SiteMover)
-- Removed functions no longer needed: bulkRegisterFiles, registerFileInCatalog (SiteMover)
-- Removed call to file registration from mover_put_data() (Mover)
-- Removed unnecessary argument lfcreg from mover_put_data() (Mover)
-- Removed unnecessary argument lfcreg in calls to mover_put_data() (JobLog, pilot, RunJob, RunJobEvent)
-- Pilot option -B lfcRegistration now unused (kept support for -B but it is ignored if set), in argParser() (pilot)
-- Removed -B option in getSubprocessArguments() (Experiment)
-- Out-commented -B option in argumentParser() (RunJob)
-- Removed __fileCatalogRegistration and getter function, no longer needed (RunJob, RunJobEvent)
-- Removed usages of lfcRegistration and lfcreg (Experiment, pilot, JobRecovery, RunJob, pUtil, environment)
-
-Update info from Edward Karavakis:
-- Patches 2-7 for the permission problem/bug with ARC+HTCondor affecting RAL and RALPP
-
-Update info from Wen Guan:
-- Now using a reg exp instead of string comparison in matchCopyprefixReplica() to fix a problem with copyprefix pattern matching seen at BNL_EC2E1_MCORE (Mover)
-- Mode set to 33188 for secret key metadata (S3ObjectstoreSiteMover)
-- Sending 's3objectstore' instead of 'gfal-copy' to tracing report (S3ObjectstoreSiteMover)
-
-Changed in AMSTaiwanSiteInformation:
-- Importing getExtension() from FileHandling instead of from pUtil
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-62.1:
-
-Corrected getLFN() for LFN vs basename comparison, affecting a few user jobs ("Get function can not be called for staging input files") (pUtil)
-Added missing module name to readpar() call in __monitor_processes(), affecting job that exceeded maxtime ("Exception caught: global name 'readpar' is not defined") (Monitor)
-
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 63.0
+
+update_freq_space changed, set it back
+
 
 Added ddmEndPointIn, ddmEndPointOut, ddmEndPointLog to Job class, and handling in displayJob() and setJobDef() (Job)
 Moved exception handling for utility subprocess from executePayload() to getUtilitySubprocess() (RunJob)
@@ -195,7 +27,7 @@ Importing getExperiment, getGUID (RunJobUtilities)
 Created shouldExecuteBenchmark() and executeBenchmark() (SiteInformation, ATLASSiteInformation)
 Moved getSiteInformation() to collect WN info section in runMain() (pilot)
 Created getBenchmarkDictionary() (Node)
-Now getting the benchmark dictionary in runRun() (pilot)
+Now getting the benchmark dictionary in runMain() (pilot)
 Now setting job to failed in __killLoopingJob() for stuck stage-outs (Monitor)
 Added optional ddmEndPointIn argument to getPoolFileCatalog() (Mover)
 Created buildFAXPath() (Experiment)
@@ -216,8 +48,8 @@ Sending job.ddmEndPointIn to createPoolFileCatalog() from __main__() (RunJobEven
 Sending ddmEndPointIn to getPoolFileCatalog() from createPoolFileCatalogFromMessage() (RunJobEvent)
 Updated findGlobalFilePath() and getGlobalFilePaths() to accept already defined FAX paths (i.e. taken from PFC) (FAXSiteMover)
 Renamed file_list to file_dictionary in createPoolFileCatalog() (pUtil)
-Created storeDiskSpace(), used by __checkLocalSpace() (Monitor)
-Created getMaxDiskSpace(), used by addToJobMetrics() (Node)
+Created storeWorkDirSize(), used by __checkWorkDir() (Monitor)
+Created getMaxWorkDirSize(), used by addToJobMetrics() (Node)
 Added restart of utility subprocess and aborting job if token extractor has crashed at the end of the event range loop in __main__() (RunJobEvent)
 Aborting immediately if Token Extractor has died instead of waiting for AthenaMP to finish, in __main__() (RunJobEvent)
 Changed waiting time from 600 to 30, in __main__() (RunJobEvent)
@@ -242,7 +74,7 @@ Added lfns and scope_dict arguments to getTURLs() (Mover)
 Created getMatchingLFN() used by getTURLs() (Mover)
 Sending scope_dict to PFC4TURLs() from getPoolFileCatalog() (RunJobEvent)
 Corrected 'Failed' -> 'failed' message sent with updateEventRange() in listener() (RunJobEvent)
-Moved discoverAdditionalOutputFiles() from RunJob to FileHandling, added import and removed a comment
+[Out-commented call for now] Moved discoverAdditionalOutputFiles() from RunJob to FileHandling, added import and removed a comment
 
 Code merge with Alexey Anisenkov
 - Added new movers sub directory with new site mover (xrdcp) and mover module
