--- a/CHANGES
+++ b/CHANGES
@@ -94,6 +94,12 @@ Non-ATLAS related changes:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+63.1:
+
+Added missing scope_dict and sourceSite in call to sitemover_get_data() in mover_get_data() (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
