--- a/CHANGES
+++ b/CHANGES
@@ -100,6 +100,13 @@ Added missing scope_dict and sourceSite in call to sitemover_get_data() in mover
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+63.2
+
+Updated the default event index url from ific to cern, in getEventIndexURL() (EventService)
+Sending jobReport.json with the metaData field also for event service jobs, in updatePandaServer() (PandaServerClient)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
