Fix for timeoutout bug

--- a/CHANGES
+++ b/CHANGES
@@ -114,6 +114,7 @@ Added a waiting loop in listener() for send event range to finish (RunJobEvent)
 Added new variables __sending_event_range, __current_event_range and corresponding getters and setters (RunJobEvent)
 Now setting __sending_event_range using setSendingEventRange(), and __current_event_range using setCurrentEventRange() in event range loop in __main__() (RunJobEvent)
 Added memory_monitor to exclusion list for looping job killer in __loopingJobKiller() (Monitor)
+Correct bad variable name in TimerCommand::run() [timeoutout -> timeout] (TimerCommand)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
