--- a/CHANGES
+++ b/CHANGES
@@ -123,6 +123,7 @@ Sending job.taskID to downloadEventRanges() from executePayload() and __main__()
 Added taskID argument to downloadEventRanges() (EventRanges)
 Now sending taskID with GETEVENTRANGES server request in downloadEventRanges(); requested by Tadashi Maeno (EventRanges)
 Now sending taskID with GETEVENTRANGES server request in getEventRanges(); requested by Tadashi Maeno (RunJobHpcEvent)
+Created getDirectAccess(), used by shouldPFC4TURLsBeCreated() (Mover)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
